feat: update to server v0.1.4 (#18)
* feat: update to server v0.1.4

* feat: update to server v0.1.4
